finishing menu and footer components

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,5 @@
-<p>Welcome back {{name}}</p>
+<h1>Welcome back {{name}}</h1>
+
+<h2>Click here to manage your todo's list</h2>
+
+<button class="button-85" routerLink="/todos">manage todo's</button>
