--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -313,5 +313,6 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
+<app-menu></app-menu>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
