--- a/src/app/list-todos/list-todos.component.html
+++ b/src/app/list-todos/list-todos.component.html
@@ -1,15 +1,19 @@
-<table>
-    <caption>My Todo's</caption>
-    <thead>
-        <tr>
-            <th>id</th>
-            <th>description</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let todo of todos">
-            <td>{{todo.id}}</td>
-            <td>{{todo.description}}</td>
-        </tr>
-    </tbody>
-</table>
+<div class="list-todos-container">
+    <h1>My Todo's</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>description</th>
+                <th>target date</th>
+                <th>is completed ?</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let todo of todos">
+                <td>{{todo.description}}</td>
+                <td>{{todo.targetDate | date }}</td>
+                <td>{{todo.done}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
