--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -3,3 +3,8 @@
 <h2>Click here to manage your todo's list</h2>
 
 <button class="button-85" routerLink="/todos">manage todo's</button>
+
+
+<div>
+    <button (click)="getWelcomeMessage()" class="button-85">button message</button>
+</div>
