creating todo data service and retrieve data from spring boot

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -6,7 +6,7 @@
 
 
 <div>
-    <button (click)="getWelcomeMessage()" class="button-85">button message</button>
+    <button (click)="getWelcomeMessageWithPath()" class="button-85">button message</button>
 </div>
 
 <h1>{{welcomeMsg}}</h1>
