--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,17 +1,17 @@
 <h1>Todo</h1>
 
 <div class="todo-container">
+    <form action="" (ngSubmit)="!todoForm.invalid && saveTodo()" #todoForm="ngForm">
+        <fieldset>
+            <label for="">Description</label>
+            <input type="text" [(ngModel)]="todo.description" name="description" required="required">
+        </fieldset>
+        <fieldset>
+            <label for="">Date date</label>
+            <input type="date" [ngModel]="todo.targetDate | date:'yyyy-MM-dd'" (ngModelChange)="todo.targetDate=$event"
+                name="targetDate" required="required">
+        </fieldset>
 
-    <fieldset>
-        <label for="">Description</label>
-        <input type="text" [(ngModel)]="todo.description" name="description" required="required">
-    </fieldset>
-    <fieldset>
-        <label for="">Date date</label>
-        <input type="date" [ngModel]="todo.targetDate | date:'yyyy-MM-dd'" (ngModelChange)="todo.targetDate=$event"
-            name="targetDate" required="required">
-    </fieldset>
-
-    <button (click)=saveTodo()>Save</button>
-
+        <button type="submit">Save</button>
+    </form>
 </div>
