migrating from hard coded auth to basic auth

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,5 +7,7 @@
     <input type="password" id="password" name="password" placeholder="Enter your password" [(ngModel)]="password"
         required>
 
-    <button class="button-49" (click)=handleLogin()>log in</button>
+    <!-- <button class="button-49" (click)=handleLogin()>log in</button> -->
+    <button class="button-49" (click)=handleBasicAuthLogin()>log in</button>
+
 </div>
